--- a/docker/fluentd/fluentd.conf
+++ b/docker/fluentd/fluentd.conf
@@ -5,13 +5,12 @@
   port  24224
 </source>
 
-<match **>
+<match audit.**>
   @type copy
   <store>
     @type elasticsearch
     host elasticsearch
     port 9200
-    include_tag_key true
     tag_key @log_name
     logstash_format true
     logstash_prefix "audit"
