--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,11 @@ networks:
     external: true
 
 services:
-  fluentd:
-    build: ./docker/fluentd
+  redis:
+    image: redis
     restart: always
+    ports: ['127.0.0.1:16379:16379']
     networks: ['totalrecall']
-    ports:
-      - "24224:24224"
 
   elasticsearch:
     image: "elasticsearch:2"
@@ -17,7 +16,7 @@ services:
     ports: ['127.0.0.1:9200:9200']
     networks: ['totalrecall']
     volumes:
-      - esdata:/usr/share/elasticsearch/data
+    - esdata:/usr/share/elasticsearch/data
 
   kibana:
     image: "kibana:4"
@@ -25,7 +24,26 @@ services:
     networks: ['totalrecall']
     ports: ['127.0.0.1:5601:5601']
     environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
+    - ELASTICSEARCH_URL=http://elasticsearch:9200
+
+  collector:
+    image: python:3.6
+    command: /bin/bash -c 'pip install -r requirements.txt && ./collector.py'
+    restart: always
+    networks: ['totalrecall']
+    ports: ['127.0.0.1:8080:8080']
+    working_dir: /var/trc/
+    volumes:
+    - $PWD/src:/var/trc
+
+  loader:
+    image: python:3.6
+    command: /bin/bash -c 'pip install -r requirements.txt && ./loader.py'
+    restart: always
+    networks: ['totalrecall']
+    working_dir: /var/trc/
+    volumes:
+    - $PWD/src:/var/trc
 
 volumes:
   esdata:
