--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -8,7 +8,6 @@
     Listen              0.0.0.0
     Port                5170
     Format              json
-    # TLS Settings for TCP input
     tls                 on
     tls.verify          off
     tls.ca_file         /certs/ca.crt
@@ -18,8 +17,8 @@
 [OUTPUT]
     Name                es
     Match               *
-    Host                elasticsearch  # Docker service name
-    Port                9200           # Default Elasticsearch port
+    Host                elasticsearch
+    Port                9200
     Index               totalrecall
     Suppress_Type_Name  On
 
