--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -22,3 +22,9 @@
     Index               totalrecall
     Suppress_Type_Name  On
 
+#[OUTPUT]
+#    Name            nats
+#    Match           *
+#    Host            nats
+#    Port            4222
+
